# cosmos

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.depoly.yml  docker-compose.local.yml  pyproject.toml
.envs/: .django  .mysql
.github/workflows/: ci.yml
apps/api/: urls.py  views.py
apps/api/endpoints/: __init__.py  v1.py
apps/api/tests/: test_health.py  test_swagger.py
apps/restaurant/: apps.py  constants.py  urls.py
apps/restaurant/fsm/: machine.py  states.py
apps/restaurant/migrations/: 0001_initial.py
apps/restaurant/models/: __init__.py  conversation_session.py  customer.py  dialog_session.py  dish.py
apps/restaurant/roles/: analyze.py  base.py  customer.py  waiter.py
apps/restaurant/scripts/: create_customer_dialogs.py  init_dishes_data.py
apps/restaurant/serializers/: customer.py  output_validate.py
apps/restaurant/signals/: handle_user_created.py
apps/restaurant/tests/test_fsm/: test_machine.py
apps/restaurant/tests/test_signals/: test_handle_user_created.py
apps/restaurant/views/: customer.py
compose/local/django/: Dockerfile  entrypoint
compose/production/django/: Dockerfile  start.sh
compose/production/mysql/: Dockerfile
compose/production/mysql/maintenance/: backup  backups  restore
config/: asgi.py  gunicorn.conf.py  urls.py  wsgi.py
config/settings/: base.py  deploy.py  local.py  test.py
core/auth/: apps.py  urls.py
core/auth/migrations/: 0001_initial.py
core/auth/models/: user.py
core/auth/serializers/: __init__.py  user.py
core/auth/utils/: factories.py
core/auth/views/: user.py
core/db/: managers.py  mixins.py  models.py  querysets.py
core/restframework/: error_handler.py  routers.py
core/tests/: apps.py  models.py  test_models.py  test_soft_delete.py
libs/clients/http_client/: __init__.py  client.py  test_http_client.py
libs/clients/llm_client/: exceptions.py  interface.py
libs/clients/llm_client/providers/: openai_client.py
libs/http_client/: client.py  exceptions.py  test_http_client.py
libs/logging/: apps.py  filters.py  formatters.py  handlers.py  setup.py
requirements/: base.txt  develop.txt  production.txt
